# Tests

./: CMakeLists.txt  Ctest.pc.in  README.md
cmake/: CtestConfig.cmake
inc/: output.h  test.h
src/: output.c  test.c
